chore: disable legacy messaging hooks and remove old script include

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -348,9 +348,8 @@
     <!-- Web APIs (Geolocation, Camera, Clipboard, Share, etc) -->
     <script src="{% static 'js/web-apis.js' %}"></script>
     
-    <!-- TIER 8: Social Features & Messaging -->
+    <!-- TIER 8: Social Features -->
     <script src="{% static 'js/social-features.js' %}"></script>
-    <script src="{% static 'js/messaging.js' %}"></script>
     
     <!-- TIER 9: Advanced Search -->
     <script src="{% static 'js/advanced-search.js' %}"></script>
