Complete messaging system rewrite: Django Channels + WebSocket real-time chat

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -527,12 +527,8 @@
         }
     </script>
     
-    <!-- Messaging System - v2.0 -->
-    <script src="{% static 'js/messaging-api-client-v2.js' %}"></script>
-    
-    {% include "messaging-panel-v2.html" %}
-    
-    {% include "notifications-panel.html" %}
+    <!-- Chat Panel v3.0 -->
+    {% include "chat-panel.html" %}
     
     {% include "notifications-panel.html" %}
     
