--- a/IESA_ROOT/users/templates/users/profile_public.html
+++ b/IESA_ROOT/users/templates/users/profile_public.html
@@ -71,7 +71,7 @@
                   <i class="fas fa-user-plus me-2"></i>
                   <span class="follow-text">Follow</span>
                 </button>
-                 <a href="{% url 'messaging:start_conversation' user_obj.username %}" 
+                 <a href="{% url 'messaging:start_chat' user_obj.id %}" 
                    class="btn btn-light btn-modern px-4" 
                    style="border-radius: 20px; font-weight: 600; border: 2px solid #e5e7eb;">
                   <i class="fas fa-envelope me-2"></i>Send Message
