--- a/IESA_ROOT/users/templates/users/profile.html
+++ b/IESA_ROOT/users/templates/users/profile.html
@@ -65,10 +65,12 @@
                                         <i class="fas fa-user-plus me-2"></i>
                                         <span class="follow-text">Follow</span>
                                     </button>
-                                                <a href="{% url 'messaging:start_chat' profile_user.id %}" 
-                                        class="btn btn-outline-primary btn-modern">
+                                    <button class="btn btn-outline-primary btn-modern" 
+                                            disabled 
+                                            title="Функция сообщений в разработке"
+                                            style="opacity: 0.6; cursor: not-allowed;">
                                         <i class="fas fa-envelope me-2"></i>Send Message
-                                    </a>
+                                    </button>
                                 </div>
                                 
                                 <!-- User Stats -->
